Added footnote with youtube link

--- a/0-iswc-demo-paper.tex
+++ b/0-iswc-demo-paper.tex
@@ -26,7 +26,7 @@
 \begin{document}
 \mainmatter  % start of an individual contribution
 % first the title is needed
-\title{A Demonstration of Linked Data Source Discovery and Integration}
+\title{A Demonstration of Linked Data Source Discovery and Integration\protect\footnote{A video demonstration is available at http://youtu.be/sr\-XDBKeNCY}}
 % a short form should be given in case it is too long for the running head
 \titlerunning{A Demonstration of Linked Data Discovery and Integration}
 % the name(s) of the author(s) follow(s) next
